force-app/main/default/objects/GPMS_Geospatial_Information_LayerVersion__c/GPMS_Geospatial_Information_LayerVersion__c.object-meta.xml
<CustomObject>
    <label>Geospatial Information Layer Version</label>
    <nameField>
        <displayFormat>GILV-{00000}</displayFormat>
        <label>Geospatial Run ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Geospatial Information Layer Version</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>