force-app/main/default/objects/GPMS_Geospatial_Information_LayerVersion__c/fields/Current__c.field-meta.xml
<CustomField>
    <fullName>Current__c</fullName>
    <defaultValue>true</defaultValue>
    <description>The latest version of the Geospatial layer version table</description>
    <label>Current</label>
    <type>Checkbox</type>
</CustomField>