force-app/main/default/objects/GPMS_Geospatial_Information_LayerVersion__c/fields/GPMS_Address__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The address which has the bulk refresh error</description>
    <label>Address</label>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Geospatial Information Layer Version</relationshipLabel>
    <relationshipName>Geospatial_Information_Refresh_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>