force-app/main/default/objects/GPMS_Geospatial_Information_LayerVersion__c/fields/GPMS_Batch_Run_Number__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Batch_Run_Number__c</fullName>
    <description>Bulk refresh batch run number for trouble shooting</description>
    <label>Batch Run Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>