force-app/main/default/objects/GPMS_Geospatial_Information_LayerVersion__c/fields/GPMS_Code__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Code__c</fullName>
    <description>The code of the Geospatial layer version table</description>
    <label>Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>