force-app/main/default/objects/GPMS_Geospatial_Information_LayerVersion__c/fields/GPMS_Description__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Description__c</fullName>
    <description>The description of the Geospatial layer version table</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>