force-app/main/default/objects/GPMS_Geospatial_Information_LayerVersion__c/fields/GPMS_Duplicate_Layer_Version__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Duplicate_Layer_Version__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Duplicate Layer Version</label>
    <type>Checkbox</type>
</CustomField>