force-app/main/default/objects/GPMS_Geospatial_Information_LayerVersion__c/fields/GPMS_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Effective_Date__c</fullName>
    <description>The effective date the Geospatial layer version bulk refresh</description>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>