force-app/main/default/objects/GPMS_Geospatial_Information_LayerVersion__c/fields/GPMS_Failure_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Failure_Date_Time__c</fullName>
    <label>Failure Date Time</label>
    <type>DateTime</type>
</CustomField>