force-app/main/default/objects/GPMS_Geospatial_Information_LayerVersion__c/fields/GPMS_Failure_Detail__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Failure_Detail__c</fullName>
    <label>Failure Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>