force-app/main/default/objects/GPMS_Geospatial_Information_LayerVersion__c/fields/GPMS_Failure_Record_Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Failure_Record_Unique_Id__c</fullName>
    <description>The error details contain address id, layer id, and version</description>
    <externalId>true</externalId>
    <label>Failure Record Unique Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>