force-app/main/default/objects/GPMS_Geospatial_Information_LayerVersion__c/fields/GPMS_Layer__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Layer__c</fullName>
    <description>The layer of the Geospatial layer version table</description>
    <label>Layer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>