force-app/main/default/objects/GPMS_Geospatial_Information_LayerVersion__c/fields/GPMS_Layer_Id__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Layer_Id__c</fullName>
    <description>The layer id of the Geospatial layer version table</description>
    <label>Layer Id</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>