force-app/main/default/objects/GPMS_Geospatial_Information_LayerVersion__c/fields/GPMS_Layer_Version__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Layer_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The linked layer version table of bulk refresh</description>
    <label>Geospatial Layer</label>
    <referenceTo>GPMS_Geospatial_Information_LayerVersion__c</referenceTo>
    <relationshipLabel>Refresh History</relationshipLabel>
    <relationshipName>Refresh_History</relationshipName>
    <type>Lookup</type>
</CustomField>