force-app/main/default/objects/GPMS_Geospatial_Information_LayerVersion__c/fields/GPMS_Loaded_date__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Loaded_date__c</fullName>
    <label>Loaded date</label>
    <type>Date</type>
</CustomField>