force-app/main/default/objects/GPMS_Geospatial_Information_LayerVersion__c/fields/GPMS_Refresh_Comment__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Refresh_Comment__c</fullName>
    <description>The error detail of bulk refresh error information</description>
    <label>Refresh Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>