force-app/main/default/objects/GPMS_Geospatial_Information_LayerVersion__c/fields/GPMS_Refresh_Layer_Version__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Refresh_Layer_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The linked refresh information of bulk refresh error</description>
    <label>Refresh Layer Version</label>
    <referenceTo>GPMS_Geospatial_Information_LayerVersion__c</referenceTo>
    <relationshipLabel>Refresh Error</relationshipLabel>
    <relationshipName>Refresh_Error</relationshipName>
    <type>Lookup</type>
</CustomField>