force-app/main/default/objects/GPMS_Geospatial_Information_LayerVersion__c/fields/GPMS_Refresh_Status__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Refresh_Status__c</fullName>
    <description>The refresh status of the Geospatial layer version bulk refresh</description>
    <label>Refresh Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>