force-app/main/default/objects/GPMS_Geospatial_Information_LayerVersion__c/fields/GPMS_Version__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Version__c</fullName>
    <description>The version of the Geospatial Layer Version table</description>
    <label>Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>