force-app/main/default/objects/GPMS_Geospatial_Information_LayerVersion__c/fields/Oracle_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Oracle_External_Id__c</fullName>
    <description>Field for upsert</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>