force-app/main/default/objects/GPMS_Geospatial_Information_LayerVersion__c/fields/Oracle_Geo_Version_Id__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Geo_Version_Id__c</fullName>
    <description>This field act as linkages between objects based on the info we have from NAPs</description>
    <label>Geo Version ID</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>