force-app/main/default/objects/GPMS_Geospatial_Information_LayerVersion__c/recordTypes/GPMS_Layer_Version_GILV.recordType-meta.xml
<RecordType>
    <fullName>GPMS_Layer_Version_GILV</fullName>
    <active>true</active>
    <description>Layer Version table</description>
    <label>Layer Version</label>
</RecordType>