force-app/main/default/objects/GPMS_Geospatial_Information_LayerVersion__c/recordTypes/GPMSRefresh_Error_GILV.recordType-meta.xml
<RecordType>
    <fullName>GPMSRefresh_Error_GILV</fullName>
    <active>true</active>
    <description>Geospatial bulk refresh error table</description>
    <label>Refresh Error</label>
</RecordType>