force-app/main/default/objects/GPMS_Geospatial_Information_LayerVersion__c/recordTypes/Refresh_Layer_Version_GILV.recordType-meta.xml
<RecordType>
    <fullName>Refresh_Layer_Version_GILV</fullName>
    <active>true</active>
    <description>Geospatial bulk refresh table</description>
    <label>Refresh Layer Version</label>
</RecordType>