force-app/main/default/objects/GPMS_Geospatial_Information_LayerVersion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>GPMS_Layer__c</columns>
    <columns>GPMS_Layer_Id__c</columns>
    <columns>GPMS_Version__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>