force-app/main/default/objects/GPMS_Geospatial_Information_LayerVersion__c/listViews/Layer_Version.listView-meta.xml
<ListView>
    <fullName>Layer_Version</fullName>
    <columns>GPMS_Layer_Id__c</columns>
    <columns>GPMS_Layer__c</columns>
    <columns>GPMS_Effective_Date__c</columns>
    <columns>GPMS_Code__c</columns>
    <columns>GPMS_Description__c</columns>
    <columns>GPMS_Version__c</columns>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>GPMS_Geospatial_Information_LayerVersion__c.GPMS_Layer_Version_GILV</value>
    </filters>
    <filters>
        <field>Current__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Layer Version</label>
</ListView>