force-app/main/default/objects/GPMS_Geospatial_Information_LayerVersion__c/listViews/Refresh_Error.listView-meta.xml
<ListView>
    <fullName>Refresh_Error</fullName>
    <columns>NAME</columns>
    <columns>GPMS_Refresh_Layer_Version__c</columns>
    <columns>GPMS_Layer__c</columns>
    <columns>GPMS_Layer_Id__c</columns>
    <columns>GPMS_Version__c</columns>
    <columns>GPMS_Failure_Detail__c</columns>
    <columns>GPMS_Failure_Date_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>GPMS_Refresh_Status__c</field>
        <operation>equals</operation>
        <value>Error</value>
    </filters>
    <label>Refresh Error</label>
</ListView>