force-app/main/default/objects/GPMS_Geospatial_Information_LayerVersion__c/listViews/Refresh_Layer_Version.listView-meta.xml
<ListView>
    <fullName>Refresh_Layer_Version</fullName>
    <columns>NAME</columns>
    <columns>GPMS_Layer_Version__c</columns>
    <columns>GPMS_Layer__c</columns>
    <columns>GPMS_Layer_Id__c</columns>
    <columns>GPMS_Version__c</columns>
    <columns>GPMS_Refresh_Status__c</columns>
    <columns>GPMS_Refresh_Comment__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>GPMS_Geospatial_Information_LayerVersion__c.Refresh_Layer_Version_GILV</value>
    </filters>
    <filters>
        <field>GPMS_Refresh_Status__c</field>
        <operation>notEqual</operation>
        <value>Error</value>
    </filters>
    <label>Refresh Layer Version</label>
</ListView>